<resources>
    <string name="app_name">Youthquake</string>

    <!--UpdateIcon-->
    <string name="title">Selecione um avatar:</string>

    <!--Main-->
    <string name="titleMain">A educação financeira como você nunca viu</string>
    <string name="buttonCreate">Criar conta</string>
    <string name="buttonLogin">Entrar</string>

    <!--Apostas-->
    <string name="titleBet">Você manda! Diga quais serão as regras da aposta:</string>
    <string name="labelTypeBet">Defina um objetivo da aposta!</string>
    <string name="labelValueBet">Valor apostado:</string>
    <string name="labelDateBet">Defina uma data pra aposta:</string>
    <string name="buttonBetText">Apostar!</string>

    <!--Movimentações-->
    <string name="titleMovements">Aqui você poderá registrar todas as suas atividades financeiras, seja uma economia, um gasto...</string>
    <string name="labelTypeMovements">Defina o tipo da movimentação</string>
    <string name="labelValueMovements">E quanto foi?</string>
    <string name="labelDateMovements">Data da transação:</string>
    <string name="buttonMovementsText">Registrar</string>

    <!--Home-->
    <string name="welcome">Bem vindo(a) ao Youthquake</string>
    <string name="levelUser">Nível %1$d</string>

    <!--Steps-->
    <string name="buttonUnderstand">Entendi!</string>
    <string name="btStepNext">Próximo</string>
    <string name="titleStep1">Olá, %1$s! Controle seus gastos</string>
    <string name="subTitleStep1">Registre seus gastos e economias para melhor controle</string>
    <string name="titleStep2">Interaja com amigos</string>
    <string name="subTitleStep2">Faça apostas e compartilhe conhecimento com amigos!</string>
    <string name="titleStep3">Aprenda e divirta-se</string>
    <string name="subTitleStep3">Jogue nosso mini game para testar seus conhecimentos!</string>

    <!--Login-->
    <string name="signin">Entrar</string>
    <string name="inputUsername">E-mail ou username</string>
    <string name="passwordInput">Senha</string>
    <string name="rejectedAccess">Usuário/ou senha incorretos</string>

    <!--Cadastro-->
    <string name="register">Cadastrar</string>
    <string name="nameInput">Nome</string>
    <string name="confirmEmail">Confirme seu e-mail</string>
    <string name="registeredSuccessfully">Cadastro finalizado com sucesso</string>

    <!--Sair-->
    <string name="pressBackToFinish">Clique novamente para sair</string>

    <!--Home menu-->
    <string name="goToGame">Quiz</string>
    <string name="goToRanking">Meus amigos</string>
    <string name="goToLogin">Sair</string>
    <string name="allReserved">Todos os Direitos Reservados © 2019</string>
</resources>
