<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/retangle"
    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintBottom_toTopOf="@+id/etUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="200dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputUsername"
        android:id="@+id/etUsername"
        android:layout_marginTop="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:background="@drawable/bottom_border_primary"
        android:textCursorDrawable="@drawable/cursor" />

    <EditText
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/passwordInput"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:background="@drawable/bottom_border_primary"
        android:textCursorDrawable="@drawable/cursor" />

    <Switch
        android:theme="@style/switchStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Lembrar de mim"
        android:id="@+id/remember"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:padding="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        style="@style/btnRoxo"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:id="@+id/btLogin"
        app:layout_constraintTop_toBottomOf="@id/remember"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>